[grazie + pro] Clean up + use java21 concise methods
Merge-request: IJ-MR-176144
Merged-by: Ilia Permiashkin <ilia.permiashkin@jetbrains.com>

GitOrigin-RevId: 5e48c38170f09d58d452eebe2f226e354f3d5b76